# BkgSimulationTools

./: README  README.md
G4sensitivity/RE11/TrGEMG4/: aegisGenerator.cxx.calibpi  drawReco.C
G4sensitivity/RE11/TrGEMG4-build/: Neutron.mac  README  Sensitivity.C  Sensitivity.h  build.sh  flux_e_ge11.txt  flux_n_ge11.txt  flux_ph_ge11.txt  runSensitivity.C
G4sensitivity/RE11/TrGEMG4/trunk/: CMakeLists.txt  TrGEMG4.cc  TrGEMG4.cc.bak  vis.mac
G4sensitivity/RE11/TrGEMG4/trunk/.svn/: all-wcprops  entries
G4sensitivity/RE11/TrGEMG4/trunk/.svn/text-base/: TrGEMG4.cc.svn-base  simpleNoVis.mac.svn-base  simpleVis.mac.svn-base
G4sensitivity/RE11/TrGEMG4/trunk/UserData/: GE11_e_angx_back.out  GE11_e_angx_front.out  GE11_e_angy_back.out  GE11_e_angy_front.out  GE11_n_angx_back.out  GE11_n_angx_front.out  GE11_n_angy_back.out  GE11_n_angy_front.out  GE11_ph_angx_back.out  GE11_ph_angx_front.out  GE11_ph_angy_back.out  GE11_ph_angy_front.out  NeutronSpectrum.out  RPC_eleCosX.out  RPC_eleCosY.out  RPC_gammaCosX.out  RPC_gammaCosY.out  RPC_neutronCosX.out  RPC_neutronCosY.out  faispettrog.C
G4sensitivity/RE11/TrGEMG4/trunk/include/: GE1ElePrimaryGeneratorAction.hh  GE1GammaPrimaryGeneratorAction.hh  GE1PosPrimaryGeneratorAction.hh  GE1PrimaryGeneratorAction.hh  GasGapHit.hh  GasGapSensitiveDetector.hh  RE11DetectorConstruction.hh  TrGEMAnalysis.hh  TrGEMEventAction.hh  TrGEMRunAction.hh
G4sensitivity/RE11/TrGEMG4/trunk/include/.svn/: all-wcprops  entries
G4sensitivity/RE11/TrGEMG4/trunk/include/.svn/text-base/: GasGapSensitiveDetector.hh.svn-base  RPCDetectorConstruction.hh.svn-base  TrGEMAnalysis.hh.svn-base  TrGEMDetectorConstruction.hh.svn-base  TrGEMHolesParameterisation.hh.svn-base  TrGEMPhysicsList.hh.svn-base  TrGEMPrimaryGeneratorAction.hh.svn-base  TrGEMStackingAction.hh.svn-base  TrGEMSteppingAction.hh.svn-base  UniPVRPCDetectorConstruction.hh.svn-base
G4sensitivity/RE11/TrGEMG4/trunk/src/: GE1ElePrimaryGeneratorAction.cc  GE1GammaPrimaryGeneratorAction.cc  GE1PosPrimaryGeneratorAction.cc  GE1PrimaryGeneratorAction.cc  GE1PrimaryGeneratorAction.cc.nuovo  GasGapSensitiveDetector.cc  RE11DetectorConstruction.cc  TrGEMAnalysis.cc  TrGEMStackingAction.cc  TrGEMSteppingAction.cc
G4sensitivity/RE11/TrGEMG4/trunk/src/.svn/: all-wcprops  entries
G4sensitivity/RE11/TrGEMG4/trunk/src/.svn/text-base/: .GasGapSensitiveDetector.cc.swp.svn-base  GasGapHit.cc.svn-base  GasGapSensitiveDetector.cc.svn-base  RPCDetectorConstruction.cc.svn-base  TrGEMAnalysis.cc.svn-base  TrGEMDetectorConstruction.cc.svn-base  TrGEMEventAction.cc.svn-base  TrGEMHolesParameterisation.cc.svn-base  TrGEMPhysicsList.cc.svn-base  TrGEMPrimaryGeneratorAction.cc.svn-base  TrGEMRunAction.cc.svn-base  TrGEMSteppingAction.cc.svn-base  UniPVRPCDetectorConstruction.cc.svn-base
geometries/: CMSpp_v3.7.2.0.inp
results/: README.md
runFLUKA/: README.md  send_array.job
runFLUKA/fluka_standalone/: cmssw501.fieldmap  common.py  compile.py  randseed.py  version.py
runFLUKA/fluka_standalone/routines/: fieldi.f  lbqfin.f  lbqfld.f  litwod.f  magfld.f  mgdraw.f  mhcos.f  usrglo.f
runFLUKA/fluka_standalone/templates/: CMSpp_v3.0.0.0.inp
(+2 files in other folders)
